fixed nav and spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  margin-top: 50px;
 }
 
 
@@ -54,44 +55,6 @@ header {
   top: 0;
   z-index: 9999;
 }
-/* 
-header h2 {
-  font-weight: bold;
-  font-size: 36px;
-  background-color: var(--secondary-color);
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  padding: 5px 10px 5px 75px;
-} */
-/* 
-header h2 {
-  text-decoration: none;
-  color: var(--primary-color);
-}
-
-header nav :last-child {
-  margin-right: 25px;
-}
-
-header nav ul {
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-  width: 100%;
-}
-
-header nav ul li a {
-  padding: 10px 20px;
-  font-weight: bolder;
-  font-size: 1.55vw;
-  color: var(--secondary-color);
-  border-bottom: 4px solid var(--secondary-color);
-  padding-bottom: 2px;
-  margin-left: 5px;
-  margin-right: 5px;
-} */
 
 body {
   font-size:1.2rem;
@@ -99,7 +62,7 @@ body {
   background:#1d1d1d;
   display:block;min-width:320px;
   font-family:"Open Sans",sans-serif;
-  color:#fff;padding-left:13rem;
+  color:#fff;
   overflow-y:scroll;
   overflow-x:hidden;
 }
@@ -108,70 +71,16 @@ footer {
  font-size: 0.8rem;
 }
 
-.main-menu {
-  width: 13 rem;
-  background-color: #181818;
-  height: 100vh;
-  position: fixed;
-  left: 0;
-  top: 0;
-  right: auto;
-  bottom: 0;
-  display: flex;
-  z-index: 3;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  flex-direction: column;
-  -webkit-box-pack: justify;
-  justify-content: space-between;
-  -webkit-break-align: center;
-  align-items: center;
-  margin: 0;
-  padding: 0;
-}
 
-.main-menu_nav {
-width:100%;
-display:-webkit-box;
-display:-ms-flexbox;
-display:flex;
--webkit-box-orient:vertical;
--webkit-box-direction:normal;
--ms-flex-direction:column;
-flex-direction:column;
--webkit-box-pack:center;
--ms-flex-pack:center;
-justify-content:center;
--webkit-box-align:center;
--ms-flex-align:center;
-align-items:center;
-border-top:1px solid #282828
-}
 
-.main-menu_nav Link{
-  text-align:center;
-  width:100%;
-  display:block;
-  font-size:1.6rem;
-  color:#909096;
-  line-height:5rem;
-  border-bottom:1px solid #282828;
-  -webkit-transition:color .3s,background-color .3s;
-  -o-transition:color .3s,background-color .3s;
-  transition:color .3s,background-color .3s
-}
+
+
 .nav-text {
   color:#909096;
 
 }
 
-nav {
-  width: 100%;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  flex-direction: column;
-}
+
 
 .page-about {
   overflow: hidden;
@@ -183,7 +92,6 @@ nav {
 
 .section-full {
   min-height: 100vh;
-  padding: 9rem 3rem;
   position: relative;
 }
 
