--- a/src/index.css
+++ b/src/index.css
@@ -148,6 +148,8 @@ input:focus {
 
 li {
   list-style: none;
+  display: inline;
+  margin: 10px;
 }
 
 nav a:hover {
@@ -290,6 +292,51 @@ a {
 	
 }
 
+nav.fixed {
+  bottom: inherit;
+  left: 0;
+  position: fixed;
+  top: 0;
+}
+
+.flex {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+nav {
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  background:rgba(0, 0, 0, .5);
+  border-bottom: 3px solid #04c2c9;
+  height: 50px;
+  text-align: left;
+  width: 100%;
+  z-index: 99;
+}
+
 .navActive {
   color: var(--secondary);
+}
+
+.footer{
+  margin-top: 1rem;
+  padding: 1rem;
+  position: relative;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
+#contact-form{
+  width: 100%;
+}
+
+#contact-form div {
+  padding: .5rem;
+  height:auto;
+  width:auto;
 }
